--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas == 1.0.3
-streamlit ==  0.56.0
+streamlit ==  0.65.2
 xlrd == 1.2.0
 plotly == 4.7.1
 numpy == 1.18.1
@@ -7,3 +7,5 @@ requests == 2.22.0
 mechanize == 0.4.5
 beautifulsoup4 == 4.8.2
 validators == 0.15.0
+tensorflow == 2.2.0
+tensorflow-hub == 0.9.0
